--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
      <title>pwa example</title>  
-     <meta name="description" content="Google search description">  
+     <meta name="description" content="pwa example with vite plugin">  
      <meta charset="UTF-8" />
      <link rel="manifest" href="/manifest.webmanifest">
      <link rel="icon" href="/favicon.ico" />
